# soochcart

./: Cargo.toml  README.md
assets/maps/testing/: scene.glb
src/: camera.rs  debug.rs  kart.rs  lib.rs  main.rs  map.rs  random.rs
src/kart/: input.rs  mod.rs  wheel.rs
