[package]
name = "soochcart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", default-features = false, features = [
    "bevy_gltf",
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_gizmos",
    "multi-threaded",
    "png",
    "webgl2",
    "tonemapping_luts",
] }
bevy_rapier3d = { version = "0.23.0", features = ["enhanced-determinism"] }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
bevy-inspector-egui = "0.21.0"
